fix sidebar - collapse, instafeed size display and parallax

--- a/assets/css/now-ui-kit.css
+++ b/assets/css/now-ui-kit.css
@@ -3746,7 +3746,7 @@ Created using IcoMoon - icomoon.io
   .page-header:before {
     background-color: rgba(0, 0, 0, 0.9); }
   .page-header[filter-color="orange"] {
-    background: rgba(14, 214, 194, 0.2);  
+    background: rgba(14, 214, 194, 0.2);
     /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(90deg, rgba(14, 214, 194, 0.2), rgba(42, 94, 89, 0.9));
     /* For Safari 5.1 to 6.0 */
@@ -4012,7 +4012,8 @@ Created using IcoMoon - icomoon.io
     display: block;
     top: 0;
     height: 100% !important;
-    width: 300px;
+    width: 175px;
+    max-width: 175px;
     right: 0;
     z-index: 1032;
     visibility: visible;
@@ -4361,11 +4362,11 @@ Created using IcoMoon - icomoon.io
     -ms-transform: translate3d(-150px, 0, 0);
     transform: translate3d(-150px, 0, 0); }
   .nav-open .sidebar-collapse .navbar-translate {
-    -webkit-transform: translate3d(-300px, 0, 0);
-    -moz-transform: translate3d(-300px, 0, 0);
-    -o-transform: translate3d(-300px, 0, 0);
-    -ms-transform: translate3d(-300px, 0, 0);
-    transform: translate3d(-300px, 0, 0); }
+    -webkit-transform: translate3d(-175px, 0, 0);
+    -moz-transform: translate3d(-175px, 0, 0);
+    -o-transform: translate3d(-175px, 0, 0);
+    -ms-transform: translate3d(-175px, 0, 0);
+    transform: translate3d(-175px, 0, 0); }
   .nav-open .sidebar-collapse.menu-on-left .navbar-collapse {
     -webkit-transform: translate3d(0px, 0, 0);
     -moz-transform: translate3d(0px, 0, 0);
